# pkgs/models/rating.go
@@ -5,7 +5,7 @@ import "github.com/jinzhu/gorm"
 // Rating rating
 type Rating struct {
 	gorm.Model
-	Rating  int `json:"rating" binding:"required"`
-	MovieID int
-	Movie   Movie `json:"movie" binding:"required" gorm:"association_autoupdate:false"`
+	Rating  int    `json:"rating" binding:"required"`
+	MovieID int    `json:"-"`
+	Movie   *Movie `json:"-" gorm:"association_autoupdate:false"`
 }
